Fixed some spacing issues and navbar not respecting boundaries

--- a/website/LESS/body.less
+++ b/website/LESS/body.less
@@ -57,7 +57,10 @@ body {
                     }
                     @media @max708 {
                         top: 470px;
-                        font-size: 3rem;
+                        font-size: 2.5rem;
+                    }
+                    @media @max450 {
+                        font-size: 1.5rem;
                     }
                 }
 
@@ -215,6 +218,7 @@ body {
             
             .hero3 {
                 max-width: 100%;
+                margin-top: 1.5rem;
                 margin-bottom: 3.5rem; 
             }
         }
