--- a/website/LESS/footer.less
+++ b/website/LESS/footer.less
@@ -61,6 +61,9 @@
             @media @max708 {
                 font-size: 2rem;
             }
+            @media @max450 {
+                font-size: 1.5rem;
+            }
             
             a{
                 text-decoration: none;
