--- a/website/LESS/nav.less
+++ b/website/LESS/nav.less
@@ -16,16 +16,12 @@
         @media @max708 {
             padding-bottom: 0;
         }
-        
-        h1 {
-            font-size: 1.8rem;
-            color: @fontMain;
-        }
     }
     
     .navBar {
         display: flex;
         width: 40rem;
+        max-width: 90%;
         justify-content: space-between;
         padding-top: @navPadding;
         padding-bottom: @navPadding;
@@ -46,7 +42,6 @@
             @media @max708 {
                 flex-wrap: wrap;
                 margin-bottom: 1rem;
-                float: right;
             }
         }
         a:hover {
