--- a/website/css/main.css
+++ b/website/css/main.css
@@ -159,13 +159,10 @@ html {
     padding-bottom: 0;
   }
 }
-.header .logo h1 {
-  font-size: 1.8rem;
-  color: #E85A4F;
-}
 .header .navBar {
   display: flex;
   width: 40rem;
+  max-width: 90%;
   justify-content: space-between;
   padding-top: 4.5rem;
   padding-bottom: 4.5rem;
@@ -190,7 +187,6 @@ html {
   .header .navBar a {
     flex-wrap: wrap;
     margin-bottom: 1rem;
-    float: right;
   }
 }
 .header .navBar a:hover {
@@ -265,7 +261,12 @@ body .center main .heroArea h1 {
 @media (max-width: 710px) {
   body .center main .heroArea h1 {
     top: 470px;
-    font-size: 3rem;
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 450px) {
+  body .center main .heroArea h1 {
+    font-size: 1.5rem;
   }
 }
 body .center main .heroArea .hero {
@@ -428,6 +429,7 @@ body .center main .products2 .txt2:hover {
 }
 body .center main .hero3 {
   max-width: 100%;
+  margin-top: 1.5rem;
   margin-bottom: 3.5rem;
 }
 body .shopContent {
@@ -584,6 +586,11 @@ footer .mailingList {
 @media (max-width: 710px) {
   footer .mailingList {
     font-size: 2rem;
+  }
+}
+@media (max-width: 450px) {
+  footer .mailingList {
+    font-size: 1.5rem;
   }
 }
 footer .mailingList a {
